--- a/notebooks/analysis_week1.ipynb
+++ b/notebooks/analysis_week1.ipynb
@@ -1261,80 +1261,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(preview_df['tweet_id'].tolist())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows = preview_df.index.tolist()\n",
-    "for row in rows[:10]:\n",
-    "    print(preview_df.loc[row]['text'])\n",
-    "    print(preview_df.loc[row]['bigrams'])\n",
-    "    print(preview_df.loc[row]['trigrams'])\n",
-    "    print(preview_df.loc[row]['quadgrams'])\n",
-    "    print(preview_df.loc[row]['ch_trigram'])\n",
-    "    print(preview_df.loc[row]['ch_quadgram'])\n",
-    "    print('\\n')\n",
-    "    print(preview_df.loc[row]['user_description'])\n",
-    "    print(preview_df.loc[row]['bigrams_user_description'])\n",
-    "    print(preview_df.loc[row]['trigrams_user_description'])\n",
-    "    print(preview_df.loc[row]['quadgrams_user_description'])\n",
-    "    print(preview_df.loc[row]['ch_trigram_user_description'])\n",
-    "    print(preview_df.loc[row]['ch_quadgram_user_description'])\n",
-    "    print('\\n')\n",
-    "    print('\\n')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preview_df.loc[3596]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preview_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -1635,32 +1561,7 @@
     "\n",
     "filename = 'test_25_nw_nr' \n",
     "\n",
-    "WriteCSV(featureSet,filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4    205\n",
-       "3     76\n",
-       "2     40\n",
-       "1     29\n",
-       "0      4\n",
-       "Name: influence_interval, dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "featureSet.influence_interval.value_counts()"
+    "file_io.WriteCSV(featureSet,filename)"
    ]
   },
   {
