--- a/notebooks/prediction.ipynb
+++ b/notebooks/prediction.ipynb
@@ -30,275 +30,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "filename: ../data/models/test_25_nw_nr.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>created_hr</th>\n",
-       "      <th>user_since</th>\n",
-       "      <th>num_tags</th>\n",
-       "      <th>num_media</th>\n",
-       "      <th>num_symbols</th>\n",
-       "      <th>num_urls</th>\n",
-       "      <th>num_user_mentions</th>\n",
-       "      <th>influence_interval</th>\n",
-       "      <th>isVerified</th>\n",
-       "      <th>isReply</th>\n",
-       "      <th>...</th>\n",
-       "      <th>('asshole', 'every', 'room', 'look')</th>\n",
-       "      <th>('every', 'room', 'look', 'around')</th>\n",
-       "      <th>('room', 'look', 'around', 'see')</th>\n",
-       "      <th>('look', 'around', 'see', 'one')</th>\n",
-       "      <th>('around', 'see', 'one', 'asshole')</th>\n",
-       "      <th>('ewarren', 'girl')</th>\n",
-       "      <th>('girl', 'saying')</th>\n",
-       "      <th>('ewarren', 'girl', 'saying')</th>\n",
-       "      <th>ewar</th>\n",
-       "      <th>warr</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4225</th>\n",
-       "      <td>14</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>621</th>\n",
-       "      <td>16</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>738</th>\n",
-       "      <td>18</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2621</th>\n",
-       "      <td>12</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4982</th>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 29159 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      created_hr  user_since  num_tags  num_media  num_symbols  num_urls  \\\n",
-       "4225          14           6         0          0            0         0   \n",
-       "621           16           3         9          0            0         1   \n",
-       "738           18           8         0          0            0         1   \n",
-       "2621          12           8         1          1            0         0   \n",
-       "4982          14           1         0          0            0         0   \n",
-       "\n",
-       "      num_user_mentions  influence_interval  isVerified  isReply  ...   \\\n",
-       "4225                  1                   4           0        1  ...    \n",
-       "621                   0                   4           0        1  ...    \n",
-       "738                   0                   4           0        1  ...    \n",
-       "2621                  2                   4           0        1  ...    \n",
-       "4982                  0                   4           0        1  ...    \n",
-       "\n",
-       "      ('asshole', 'every', 'room', 'look')  \\\n",
-       "4225                                     0   \n",
-       "621                                      0   \n",
-       "738                                      0   \n",
-       "2621                                     0   \n",
-       "4982                                     0   \n",
-       "\n",
-       "      ('every', 'room', 'look', 'around')  ('room', 'look', 'around', 'see')  \\\n",
-       "4225                                    0                                  0   \n",
-       "621                                     0                                  0   \n",
-       "738                                     0                                  0   \n",
-       "2621                                    0                                  0   \n",
-       "4982                                    0                                  0   \n",
-       "\n",
-       "      ('look', 'around', 'see', 'one')  ('around', 'see', 'one', 'asshole')  \\\n",
-       "4225                                 0                                    0   \n",
-       "621                                  0                                    0   \n",
-       "738                                  0                                    0   \n",
-       "2621                                 0                                    0   \n",
-       "4982                                 0                                    0   \n",
-       "\n",
-       "      ('ewarren', 'girl')  ('girl', 'saying')  ('ewarren', 'girl', 'saying')  \\\n",
-       "4225                    0                   0                              0   \n",
-       "621                     0                   0                              0   \n",
-       "738                     0                   0                              0   \n",
-       "2621                    0                   0                              0   \n",
-       "4982                    0                   0                              0   \n",
-       "\n",
-       "      ewar  warr  \n",
-       "4225     0     0  \n",
-       "621      0     0  \n",
-       "738      0     0  \n",
-       "2621     0     0  \n",
-       "4982     0     0  \n",
-       "\n",
-       "[5 rows x 29159 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Read CSV for a target into a dataframe.\n",
-    "Do not add path or extension.\n",
-    "''' \n",
-    "\n",
-    "filename = 'test_25_nw_nr'\n",
-    "\n",
-    "featureSet = file_io.ReadCSV(filename)\n",
-    "featureSet.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Subset model\n",
-    "featureSet = featureSet.drop(columns=[])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create, fit,and score classifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
@@ -308,9 +39,156 @@
     "gaussian = {'classifier_name':'B Gaussian','classifier_func': GaussianNB()}\n",
     "\n",
     "# Multiclass \n",
-    "bayes = {'classifier_name':'MNB','classifier_func': MultinomialNB()}\n",
-    "svm = {'classifier_name':'SVC','classifier_func': SVC(gamma='auto', decision_function_shape='ovo')}\n",
-    "neighbors = {'classifier_name':'KNN','classifier_func': KNeighborsClassifier(n_neighbors=4)}\n"
+    "MNB = {'classifier_name':'MNB','classifier_func': MultinomialNB()}\n",
+    "SVC = {'classifier_name':'SVC','classifier_func': SVC(gamma='auto', decision_function_shape='ovo')}\n",
+    "KNN = {'classifier_name':'KNN','classifier_func': KNeighborsClassifier(n_neighbors=4)}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filename: ../data/models/test_150_ww_nr_nt.csv\n",
+      "Classifier \t Score \t \t f1\n",
+      "-----------------------------------------------------------------\n",
+      "MNB \t \t 0.63 \t \t 0.60\t0.61\t0.61\t\n",
+      "\n",
+      "\n",
+      "SVC \t \t 0.99 \t \t 0.93\t0.92\t0.93\t\n",
+      "\n",
+      "\n",
+      "KNN \t \t 0.86 \t \t 0.74\t0.74\t0.72\t\n",
+      "\n",
+      "\n",
+      "filename: ../data/models/test_150_ww_ir_nt.csv\n",
+      "Classifier \t Score \t \t f1\n",
+      "-----------------------------------------------------------------\n",
+      "MNB \t \t 0.73 \t \t 0.62\t0.66\t0.60\t\n",
+      "\n",
+      "\n",
+      "SVC \t \t 0.98 \t \t 0.94\t0.96\t0.94\t\n",
+      "\n",
+      "\n",
+      "KNN \t \t 0.80 \t \t 0.62\t0.65\t0.61\t\n",
+      "\n",
+      "\n",
+      "filename: ../data/models/test_150_nw_nr_nt.csv\n",
+      "Classifier \t Score \t \t f1\n",
+      "-----------------------------------------------------------------\n",
+      "MNB \t \t 0.60 \t \t 0.54\t0.46\t0.59\t\n",
+      "\n",
+      "\n",
+      "SVC \t \t 0.99 \t \t 0.93\t0.96\t0.96\t\n",
+      "\n",
+      "\n",
+      "KNN \t \t 0.84 \t \t 0.64\t0.65\t0.68\t\n",
+      "\n",
+      "\n",
+      "filename: ../data/models/test_150_nw_ir_nt.csv\n",
+      "Classifier \t Score \t \t f1\n",
+      "-----------------------------------------------------------------\n",
+      "MNB \t \t 0.69 \t \t 0.63\t0.60\t0.64\t\n",
+      "\n",
+      "\n",
+      "SVC \t \t 0.99 \t \t 0.96\t0.98\t0.96\t\n",
+      "\n",
+      "\n",
+      "KNN \t \t 0.82 \t \t 0.61\t0.61\t0.54\t\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "files = ['test_150_ww_nr_nt','test_150_ww_ir_nt','test_150_nw_nr_nt','test_150_nw_ir_nt']\n",
+    "\n",
+    "for file in files:\n",
+    "    df = file_io.ReadCSV(file)\n",
+    "    \n",
+    "    features,labels = GetFeaturesLabels(df,'influence_interval')\n",
+    "    \n",
+    "    classifiers = [MNB,SVC,KNN]\n",
+    "    \n",
+    "    FitAndScore(features,labels,classifiers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Read CSV for a target into a dataframe.\n",
+    "Do not add path or extension.\n",
+    "''' \n",
+    "\n",
+    "filename = 'test_150_ww_nr_nt'\n",
+    "\n",
+    "test_150_ww_nr_nt = file_io.ReadCSV(filename)\n",
+    "test_150_ww_nr_nt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'test_150_ww_ir_nt'\n",
+    "\n",
+    "test_150_ww_ir_nt = file_io.ReadCSV(filename)\n",
+    "test_150_ww_ir_nt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'test_150_nw_nr_nt'\n",
+    "\n",
+    "test_150_nw_nr_nt = file_io.ReadCSV(filename)\n",
+    "test_150_nw_nr_nt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'test_150_nw_ir_nt'\n",
+    "\n",
+    "test_150_nw_ir_nt = file_io.ReadCSV(filename)\n",
+    "test_150_nw_ir_nt.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create, fit,and score classifiers"
    ]
   },
   {
@@ -334,6 +212,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "tables = [test_150_ww_nr_nt,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get features & labels\n",
+    "features,labels = GetFeaturesLabels(featureSet,'influence_interval')\n",
+    "\n",
+    "# Add classifiers to list\n",
+    "classifiers = [bayes,svm,neighbors]\n",
+    "\n",
+    "# Fit and score\n",
+    "FitAndScore(features,labels,classifiers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get features & labels\n",
+    "features,labels = GetFeaturesLabels(featureSet,'influence_interval')\n",
+    "\n",
+    "# Add classifiers to list\n",
+    "classifiers = [bayes,svm,neighbors]\n",
+    "\n",
+    "# Fit and score\n",
+    "FitAndScore(features,labels,classifiers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -343,7 +262,7 @@
    "outputs": [],
    "source": [
     "# Get features & labels\n",
-    "features,labels = GetFeaturesLabels(featureSet,'user_since')\n",
+    "features,labels = GetFeaturesLabels(featureSet,'influence_interval')\n",
     "\n",
     "# Add classifiers to list\n",
     "classifiers = [bayes,svm,neighbors]\n",
