--- a/notebooks/prediction.ipynb
+++ b/notebooks/prediction.ipynb
@@ -20,20 +20,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Load Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
-    "Place classifiers name/function call in dictionary.\n",
+    "Classifiers\n",
     "'''\n",
     "# Singleclass\n",
     "gaussian = {'classifier_name':'B Gaussian','classifier_func': GaussianNB()}\n",
@@ -46,6 +39,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Regressors\n",
+    "'''\n",
+    "DTR = {'regressor_name':'DTR','regressor_func': DecisionTreeRegressor(random_state=0)}\n",
+    "LVR = {'regressor_name':'LVR','regressor_func': svm.LinearSVR()}\n",
+    "LNR = {'regressor_name':'LNR','regressor_func': LinearRegression()}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load & Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -53,142 +67,196 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "filename: ../data/models/test_150_ww_nr_nt.csv\n",
-      "Classifier \t Score \t \t f1\n",
-      "-----------------------------------------------------------------\n",
-      "MNB \t \t 0.63 \t \t 0.60\t0.61\t0.61\t\n",
-      "\n",
-      "\n",
-      "SVC \t \t 0.99 \t \t 0.93\t0.92\t0.93\t\n",
-      "\n",
-      "\n",
-      "KNN \t \t 0.86 \t \t 0.74\t0.74\t0.72\t\n",
-      "\n",
-      "\n",
-      "filename: ../data/models/test_150_ww_ir_nt.csv\n",
-      "Classifier \t Score \t \t f1\n",
-      "-----------------------------------------------------------------\n",
-      "MNB \t \t 0.73 \t \t 0.62\t0.66\t0.60\t\n",
-      "\n",
-      "\n",
-      "SVC \t \t 0.98 \t \t 0.94\t0.96\t0.94\t\n",
-      "\n",
-      "\n",
-      "KNN \t \t 0.80 \t \t 0.62\t0.65\t0.61\t\n",
-      "\n",
-      "\n",
-      "filename: ../data/models/test_150_nw_nr_nt.csv\n",
-      "Classifier \t Score \t \t f1\n",
-      "-----------------------------------------------------------------\n",
-      "MNB \t \t 0.60 \t \t 0.54\t0.46\t0.59\t\n",
-      "\n",
-      "\n",
-      "SVC \t \t 0.99 \t \t 0.93\t0.96\t0.96\t\n",
-      "\n",
-      "\n",
-      "KNN \t \t 0.84 \t \t 0.64\t0.65\t0.68\t\n",
-      "\n",
-      "\n",
-      "filename: ../data/models/test_150_nw_ir_nt.csv\n",
-      "Classifier \t Score \t \t f1\n",
-      "-----------------------------------------------------------------\n",
-      "MNB \t \t 0.69 \t \t 0.63\t0.60\t0.64\t\n",
-      "\n",
-      "\n",
-      "SVC \t \t 0.99 \t \t 0.96\t0.98\t0.96\t\n",
-      "\n",
-      "\n",
-      "KNN \t \t 0.82 \t \t 0.61\t0.61\t0.54\t\n",
-      "\n",
-      "\n"
+      "filename: ../data/models/weighted__nonrandom_no_text.csv\n"
      ]
     }
    ],
    "source": [
-    "files = ['test_150_ww_nr_nt','test_150_ww_ir_nt','test_150_nw_nr_nt','test_150_nw_ir_nt']\n",
-    "\n",
-    "for file in files:\n",
-    "    df = file_io.ReadCSV(file)\n",
-    "    \n",
-    "    features,labels = GetFeaturesLabels(df,'influence_interval')\n",
-    "    \n",
-    "    classifiers = [MNB,SVC,KNN]\n",
-    "    \n",
-    "    FitAndScore(features,labels,classifiers)"
+    "df = file_io.ReadCSV('wk2_random_no_text')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['created_hr', 'set', 'favorite_count', 'retweet_count',\n",
+       "       'influence_score', 'user_since', 'followers_count', 'listed_count',\n",
+       "       'num_tags', 'num_media', 'num_symbols', 'num_urls', 'num_user_mentions',\n",
+       "       'influence_interval', 'isVerified', 'isRetweeted', 'isReply', 'dotw'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
-    "Read CSV for a target into a dataframe.\n",
-    "Do not add path or extension.\n",
-    "''' \n",
+    "Subset for interval\n",
     "\n",
-    "filename = 'test_150_ww_nr_nt'\n",
+    ",'favorite_count', 'retweet_count','followers_count', 'listed_count'\n",
+    "'''\n",
+    "cols = ['set','num_tags','user_since','num_media', 'num_symbols', 'num_urls', 'num_user_mentions',\n",
+    "       'influence_interval', 'isVerified', 'isRetweeted', 'isReply', 'dotw']\n",
     "\n",
-    "test_150_ww_nr_nt = file_io.ReadCSV(filename)\n",
-    "test_150_ww_nr_nt.head()"
+    "interval = df[cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'test_150_ww_ir_nt'\n",
+    "'''\n",
+    "Subset for score\n",
     "\n",
-    "test_150_ww_ir_nt = file_io.ReadCSV(filename)\n",
-    "test_150_ww_ir_nt.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = 'test_150_nw_nr_nt'\n",
+    ",'favorite_count', 'retweet_count','followers_count', 'listed_count'\n",
+    "'''\n",
+    "cols = ['influence_score', 'set','num_tags','user_since','num_media', 'num_symbols', 'num_urls', 'num_user_mentions',\n",
+    "        'isVerified', 'isRetweeted', 'isReply', 'dotw']\n",
     "\n",
-    "test_150_nw_nr_nt = file_io.ReadCSV(filename)\n",
-    "test_150_nw_nr_nt.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = 'test_150_nw_ir_nt'\n",
-    "\n",
-    "test_150_nw_ir_nt = file_io.ReadCSV(filename)\n",
-    "test_150_nw_ir_nt.head()"
+    "score = df[cols]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create, fit,and score classifiers"
+    "### Run "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "MNB \t \t 0.67 \t \t 0.63\t0.59\t0.61\t\n",
+      "\n",
+      "\n",
+      "MNB Confusion Matrix\n",
+      "[[104  10   0   0   0]\n",
+      " [  0 108  25   2  23]\n",
+      " [  0  14  63  10  63]\n",
+      " [  0   1  11  16 141]\n",
+      " [  0   0   1   5 317]]\n",
+      "\n",
+      "\n",
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "SVC \t \t 0.99 \t \t 0.94\t0.93\t0.94\t\n",
+      "\n",
+      "\n",
+      "SVC Confusion Matrix\n",
+      "[[113   1   0   0   0]\n",
+      " [  1 157   0   0   0]\n",
+      " [  0   0 148   2   0]\n",
+      " [  0   0   0 164   5]\n",
+      " [  0   0   0   1 322]]\n",
+      "\n",
+      "\n",
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "KNN \t \t 0.83 \t \t 0.61\t0.62\t0.59\t\n",
+      "\n",
+      "\n",
+      "KNN Confusion Matrix\n",
+      "[[102  12   0   0   0]\n",
+      " [ 18 127  13   0   0]\n",
+      " [  1  20 120   9   0]\n",
+      " [  0   0  19 129  21]\n",
+      " [  0   0   0  38 285]]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "features,labels = GetFeaturesLabels(interval,'influence_interval')\n",
+    "    \n",
+    "classifiers = [MNB,SVC,KNN]\n",
+    "    \n",
+    "FitAndScoreCLA(features,labels,classifiers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regressor \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "DTR \t \t 1.00 \t \t 1.00\t1.00\t1.00\t\n",
+      "LVR \t \t 1.00 \t \t 1.00\t1.00\t1.00\t\n",
+      "LNR \t \t 1.00 \t \t 1.00\t1.00\t1.00\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "features,labels = GetFeaturesLabels(score,'influence_score')\n",
+    "\n",
+    "regressors = [DTR,LVR,LNR]\n",
+    "\n",
+    "FitAndScoreREG(features,labels,regressors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "MNB \t \t 0.62 \t \t\n",
+      "\n",
+      "\n",
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "SVC \t \t 1.00 \t \t\n",
+      "\n",
+      "\n",
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "KNN \t \t 0.91 \t \t\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "features,labels = GetFeaturesLabels(interval,'influence_interval')\n",
+    "    \n",
+    "classifiers = [MNB,SVC,KNN]\n",
+    "    \n",
+    "TestCLA(features,labels,classifiers)"
    ]
   },
   {
@@ -197,86 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get features & labels\n",
-    "features,labels = GetFeaturesLabels(featureSet,'isVerified')\n",
-    "\n",
-    "# Add classifiers to list\n",
-    "classifiers = [gaussian]\n",
-    "\n",
-    "# Fit and score\n",
-    "FitAndScore(features,labels,classifiers)"
+    "feature_importances_"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tables = [test_150_ww_nr_nt,]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get features & labels\n",
-    "features,labels = GetFeaturesLabels(featureSet,'influence_interval')\n",
-    "\n",
-    "# Add classifiers to list\n",
-    "classifiers = [bayes,svm,neighbors]\n",
-    "\n",
-    "# Fit and score\n",
-    "FitAndScore(features,labels,classifiers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get features & labels\n",
-    "features,labels = GetFeaturesLabels(featureSet,'influence_interval')\n",
-    "\n",
-    "# Add classifiers to list\n",
-    "classifiers = [bayes,svm,neighbors]\n",
-    "\n",
-    "# Fit and score\n",
-    "FitAndScore(features,labels,classifiers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get features & labels\n",
-    "features,labels = GetFeaturesLabels(featureSet,'influence_interval')\n",
-    "\n",
-    "# Add classifiers to list\n",
-    "classifiers = [bayes,svm,neighbors]\n",
-    "\n",
-    "# Fit and score\n",
-    "FitAndScore(features,labels,classifiers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
