--- a/notebooks/collection.ipynb
+++ b/notebooks/collection.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load Schedule & Make Sets"
+    "#### Timer"
    ]
   },
   {
@@ -49,19 +49,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Run Schedule"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "RunTimer(-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Users"
    ]
   }
  ],
