--- a/notebooks/prediction.ipynb
+++ b/notebooks/prediction.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['influence_interval'] != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +116,75 @@
    "metadata": {},
    "source": [
     "### Run "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "MNB \t \t 0.29 \t \t 0.38\t0.40\t0.33\t\n",
+      "\n",
+      "\n",
+      "MNB Confusion Matrix\n",
+      "[[ 7  3  5  6]\n",
+      " [ 7  6  5 10]\n",
+      " [16  4  3 19]\n",
+      " [27  3  5 30]]\n",
+      "\n",
+      "\n",
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "SVC \t \t 0.38 \t \t 0.42\t0.46\t0.45\t\n",
+      "\n",
+      "\n",
+      "SVC Confusion Matrix\n",
+      "[[ 0  0  4 17]\n",
+      " [ 0  2  9 17]\n",
+      " [ 0  1 15 26]\n",
+      " [ 1  1 21 42]]\n",
+      "\n",
+      "\n",
+      "Classifier \t Score \t \t accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "KNN \t \t 0.29 \t \t 0.45\t0.35\t0.45\t\n",
+      "\n",
+      "\n",
+      "KNN Confusion Matrix\n",
+      "[[ 3  4  8  6]\n",
+      " [ 5  5  8 10]\n",
+      " [ 9  7 15 11]\n",
+      " [19  7 16 23]]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "features,labels = GetFeaturesLabels(interval,'influence_interval')\n",
+    "    \n",
+    "classifiers = [MNB,SVC,KNN]\n",
+    "    \n",
+    "FitAndScoreCLA(features,labels,classifiers,testSize=0.20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features,labels = GetFeaturesLabels(score,'influence_score')\n",
+    "\n",
+    "regressors = [DTR,LVR,LNR]\n",
+    "\n",
+    "FitAndScoreREG(features,labels,regressors,testSize=0.20)"
    ]
   },
   {
@@ -166,51 +244,6 @@
     "classifiers = [MNB,SVC,KNN]\n",
     "    \n",
     "FitAndScoreCLA(features,labels,classifiers,testSize=0.20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Regressor \t Score \t \t accuracy\n",
-      "-----------------------------------------------------------------\n",
-      "DTR \t \t 0.99 \t \t 0.98\t0.62\t0.49\t\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jessedecker/miniconda3/envs/gis/lib/python3.6/site-packages/sklearn/svm/base.py:922: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/jessedecker/miniconda3/envs/gis/lib/python3.6/site-packages/sklearn/svm/base.py:922: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/jessedecker/miniconda3/envs/gis/lib/python3.6/site-packages/sklearn/svm/base.py:922: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/Users/jessedecker/miniconda3/envs/gis/lib/python3.6/site-packages/sklearn/svm/base.py:922: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LVR \t \t 0.99 \t \t 0.97\t1.00\t1.00\t\n",
-      "LNR \t \t 1.00 \t \t 1.00\t1.00\t1.00\t\n"
-     ]
-    }
-   ],
-   "source": [
-    "features,labels = GetFeaturesLabels(score,'influence_score')\n",
-    "\n",
-    "regressors = [DTR,LVR,LNR]\n",
-    "\n",
-    "FitAndScoreREG(features,labels,regressors,testSize=0.20)"
    ]
   },
   {
